Fri Jun 16 15:43:00 BST 2000 Olly Betts

	* PHRASE now works; added test `phrase1' to apitest

Fri Jun 16 14:57:00 BST 2000 Olly Betts

	* Rearranged to create PhrasePostList (currently a clone of
	  NearPostList).  Shared code is in super classes.

	* `nearpostlist.*' renamed to `phrasepostlist.*'.

	* Fixed warning about declaration vs initialisation order in
	  OmQueryInternal

Fri Jun 16 12:49:00 BST 2000 Olly Betts

	* NEAR now works with distributed searching

Fri Jun 16 11:33:00 BST 2000 Olly Betts

	* NEAR now working; added NEAR test (near1) to apitest

	* OmQueryInternal copy constructor now copies max_weight

Thu Jun 15 18:43:29 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmLineBuf subclasses no longer need to implement wait_for_data()

Thu Jun 15 14:44:37 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmLineBuf now an abstract base class, with the functionality
	  moved to OmSocketLineBuf.
	
	* SocketServer can now take an OmLineBuf instead of a file
	  descriptor.

Thu Jun 15 13:33:00 BST 2000 Olly Betts

	* More work on NEAR/PHRASE

Thu Jun 15 12:16:00 BST 2000 Olly Betts

	* NEAR almost working - just need to do pushback of pos info

Wed Jun 14 18:26:00 BST 2000 Olly Betts

	* Added docs/todo.html to .cvsignore

Wed Jun 14 18:14:00 BST 2000 Olly Betts

	* PostListAndTermWeight scrapped; use get_maxweight() instead.
	  Fixes bug: max_or_terms now works with non-LeafPostlist-s;
	  regression test maxorterms2 added to apitest

	* Stub get_wdf() now in PostList

	* Documented PLPCmpLt and PLPCmpGt

	* More work on NEAR and PHRASE

Wed Jun 14 18:08:53 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove compliated class heirarchy for Stemming algorithms: replace
	  by OmStem::Internal, which has function pointers.  Neccessitated
	  changing parameters taken by each stemming algorithm to a void *
	  instead of a specific struct pointer.
