@@ -66,10 +66,6 @@ class OmLineBuf {
 	virtual bool data_waiting() = 0;
 
 	/** Block until at least a line of data has been read.
-	 *
-	 *  @param msecs  The timeout in milliseconds (or infinite
-	 *                if zero).  An exception will be thrown if
-	 *                the timeout is exceeded.
 	 */
 	virtual void wait_for_data();
 
