@@ -1,3 +1,8 @@
+Fri Jun 16 18:11:03 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Now most of the way through getting a working OmBatchEnquire in
+	  Python.
+
 Fri Jun 16 15:43:00 BST 2000 Olly Betts
 
 	* PHRASE now works; added test `phrase1' to apitest
